Reorganize CSS for maps.
Use HTML5 data attributes for JS hooks instead of CSS classes. Move
CSS for maps out of the taxa app and into the mapping app to
keep all map-related styles together. (#206)

--- a/gobotany/mapping/templates/_location_map.html
+++ b/gobotany/mapping/templates/_location_map.html
@@ -1,3 +1,3 @@
-<img id="{{ id }}" class="location-map" 
+<img id="{{ id }}" class="map" data-type="location" 
     src="http://maps.googleapis.com/maps/api/staticmap?center={{ location }}&amp;size={{ width_px }}x{{ height_px }}&amp;zoom={{ zoom }}&amp;markers=size:mid%7Ccolor:0xe1f0d1%7Clabel:1%7C{{ location }}&amp;sensor=false"
     alt="Map: {{ location }}">
