--- a/gobotany/mapping/templates/_sightings_map.html
+++ b/gobotany/mapping/templates/_sightings_map.html
@@ -1,3 +1,3 @@
-<div id="{{ id }}" class="location-map" 
+<div id="{{ id }}" class="map" data-type="sightings" 
     data-latitude="{{ latitude }}" data-longitude="{{ longitude }}"
     style="width: {{ width }}; height: {{ height }}"></div>
