Write a basic component for sightings maps. (#206)

--- a/gobotany/mapping/templates/_sightings_map.html
+++ b/gobotany/mapping/templates/_sightings_map.html
@@ -1,3 +1,4 @@
 <div id="{{ id }}" class="map" data-type="sightings" 
     data-latitude="{{ latitude }}" data-longitude="{{ longitude }}"
+    data-center-title="{{ center_title }}"
     style="width: {{ width }}; height: {{ height }}"></div>
