Prepare dkey to filter images by couplet #284
Soon, we will be changing the set of visible images at the bottom of
each dkey page so that the only species visible are those beneath the
currently active couplet. This code adjustment creates a place where we
can put such a decision Boolean.

--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* *** Go Botany master styles file ***
  Please edit only the .scss source and use Compass to auto-generate the .css.
  The generated .css is kept in the repository to allow easy deployment.
