Build jumpboxes from "hierarchy" API call #284
Instead of delivering every dkey page with the <option> elements for
the family jumpbox and genus jumpbox inline, which requires about 46k of
extra data per dkey page, we now build them dynamically from the data
returned by the "hierarchy" API call. This reduces each dkey page to
about 25% of its previous size, while creating a cachable resource
where, before, the exact set of data was repeated afresh verbatim inside
every dkey page.

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -34,18 +34,12 @@
       {% endfor %}
     </ul>
   </div>
-  <select class="jumpbox">
+  <select class="jumpbox" disabled="disabled">
     <option value="instructions">Jump to a family…</option>
-    {% for family in families %}
-      <option>{{ family }}</option>
-    {% endfor %}
   </select>
   <br>
-  <select class="jumpbox">
+  <select class="jumpbox" disabled="disabled">
     <option value="instructions">Jump to a genus…</option>
-      {% for genus in genera %}
-    <option>{{ genus }}</option>
-    {% endfor %}
   </select>
 </div>
 
