--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -83,7 +83,8 @@
 {{ page.text|render_floating_figures|render_figure_links|safe }}
 
 {% if leads %}
-  <ul class="couplets couplet" id="c1">
+  <ul class="couplets couplet" id="c1"
+      data-key-rank="{{ page.rank }}" data-key-title="{{ page.title }}">
   {% for lead in lead_hierarchy %}
     {% if lead.0 %}
       {% with literal_string=lead %}
