Align dkey images by their tops, not species names

--- a/gobotany/static/sass/_dkey.scss
+++ b/gobotany/static/sass/_dkey.scss
@@ -260,6 +260,7 @@ $disabled_orange_gradient: linear-gradient(
         figure {
             margin: 0 1em 1em 0;
             width: 160px;
+            vertical-align: top;
         }
         img {
             display: block;
