Add the word "Tribe" to tribe buttons in the dkey
Before, we just showed the name of the tribe, which was confusing
because I couldn't tell what kind of taxon it was.

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -136,7 +136,7 @@
             {% elif p.rank == 'subgroup' and page.rank == 'genus' %}
               ><i>{{ p.title|abbreviate_title }}</i>
             {% elif p.rank == 'tribe' %}
-              >{{ p.title|lastword }}
+              >{{ p.title }}
             {% else %}
               >MALFUNCTION
             {% endif %}
