--- a/gobotany/dkey/templates/dkey/_breadcrumbs.html
+++ b/gobotany/dkey/templates/dkey/_breadcrumbs.html
@@ -4,7 +4,8 @@
     {% if forloop.counter0 == 0 %}
       <a href="{% url dkey %}">« Back to the {{ atitle }}</a>
     {% else %}
-      <a href="{% url dkey_page ancestor|slug %}">« {{ atitle }}</a>
+      <a data-rank="{{ ancestor.rank }}" data-title="{{ ancestor.title }}"
+         href="{% url dkey_page ancestor|slug %}">« {{ atitle }}</a>
     {% endif %}
   {% endwith %}
 {% endfor %}
