Fix map position on PlantShare sightings form with an update. (#206)

--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -186,7 +186,7 @@ body.plantshare {
                     @include offscreen;
                 }
             }
-            .location-map {
+            .map {
                 float: right;
             }
             .post-sighting-btn {
