Move initialization code for maps to a page-specific file. (#206)

--- a/gobotany/site/templates/gobotany/maps_test.html
+++ b/gobotany/site/templates/gobotany/maps_test.html
@@ -19,7 +19,7 @@
         <script src="/static/scripts/lib/require.js"></script>
         <script src="/static/scripts/require_config.js"></script>
         <script>
-            require(['mapping/sightings_map_init']);
+            require(['site/maps_test']);
         </script>        
     </head>
     <body class="plantshare">
