--- a/gobotany/static/sass/_dkey.scss
+++ b/gobotany/static/sass/_dkey.scss
@@ -258,6 +258,7 @@ $disabled_orange_gradient: linear-gradient(
         margin-left: 1em*12px/16px;
         text-align: center;
         figure {
+            display: inline-block;
             margin: 0 1em 1em 0;
             width: 160px;
             vertical-align: top;
