--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -165,7 +165,14 @@
    Show photos of: <select></select>
 </p>
 
-<div class="taxon-images"></div>
+<div class="taxon-images">
+  {% for title, image in image_collection %}
+    <figure data-type="{{ image.image_type }}">
+      <img data-lazy-img-src="{{ image.thumb_small }}">
+      {{ title|safe }}
+    </figure>
+  {% endfor %}
+</div>
 
 {% endwith %}
 {% endblock %}
