Use imagekit to process uploaded images.
Set a maximum size on all uploaded images, and generate smaller
thumbnails on upload that can be used in galleries and as user avatars
on posts. Switch the image screening staff page to use the thumbnails
instead of the larger image.

--- a/gobotany/plantshare/templates/staff/screen_images.html
+++ b/gobotany/plantshare/templates/staff/screen_images.html
@@ -27,10 +27,10 @@
     {% for form in screening_formset %}
       <tr>
         <td>{{ form.is_approved }}</td>
-        <td><img src="{{ form.instance.image.url }}" /></td>
+        <td><img src="{{ form.instance.thumb.url }}" /></td>
         <td>{{ form.instance.get_image_type_display }}</td>
         <td>{{ form.instance.uploaded_by.get_full_name }}</td>
-        <td>{{ form.instance.uploaded }}</td>
+        <td>{{ form.instance.uploaded|date:"m/d/Y" }}</td>
       </tr>
     {% endfor %}
     </table>
