--- a/gobotany/static/sass/_mapping.scss
+++ b/gobotany/static/sass/_mapping.scss
@@ -4,6 +4,11 @@
 .map {
     border: 1px solid $border-green;
 }
+.info-window {
+    p {
+        margin-top: 0;
+    }
+}
 
 /* Plant distribution maps */
 .section {
