Move inline CSS for map images to external CSS file. (#206)

--- a/gobotany/static/sass/_mapping.scss
+++ b/gobotany/static/sass/_mapping.scss
@@ -8,6 +8,10 @@
     p {
         margin-top: 0;
     }
+    img {
+        height: 75px;
+        width: 80px;
+    }
 }
 
 /* Plant distribution maps */
