--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* *** Go Botany master styles file ***
  Please edit only the .scss source and use Compass to auto-generate the .css.
  The generated .css is kept in the repository to allow easy deployment.
@@ -535,6 +534,7 @@ input.suggest + div li.selected { background-color: #666; color: #fff; }
 .map { border: 1px solid #c3d941; }
 
 .info-window p { margin-top: 0; }
+.info-window img { height: 75px; width: 80px; }
 
 /* Plant distribution maps */
 .section.map { border: none; }
