Show larger images on the full-size sightings map. (#206)

--- a/gobotany/static/sass/_mapping.scss
+++ b/gobotany/static/sass/_mapping.scss
@@ -8,6 +8,8 @@
     p {
         margin-top: 0;
     }
+}
+#mini-sightings-map .info-window {
     img {
         height: 75px;
         width: 80px;
