--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -534,7 +534,8 @@ input.suggest + div li.selected { background-color: #666; color: #fff; }
 .map { border: 1px solid #c3d941; }
 
 .info-window p { margin-top: 0; }
-.info-window img { height: 75px; width: 80px; }
+
+#mini-sightings-map .info-window img { height: 75px; width: 80px; }
 
 /* Plant distribution maps */
 .section.map { border: none; }
