Add user name and 'more' link to sightings info box. (#206)

--- a/gobotany/site/templates/gobotany/maps_test.html
+++ b/gobotany/site/templates/gobotany/maps_test.html
@@ -62,7 +62,7 @@
 
         <h3>Sightings map for Sightings Locator page</h3>
 
-        <p>Nymhphaea odorata</p>
+        <p>Nymphaea odorata</p>
 
         {# Sightings map via template tag #}
         {% include "_sightings_map.html" with latitude="44.53599" longitude="-70.56609" center_title="Rumford, Maine" height="524px" width="710px" zoom="6" id="sightings-map" %}
