Show lookalikes without notes on the species page.
On species pages, the 'Sometimes Confused With' section now lists
lookalikes that do not have any notes defined for them yet in
the data. Previously the importer ignored these because they
did not follow the agreed data format for lookalikes. (#293)

--- a/gobotany/taxa/templates/gobotany/species.html
+++ b/gobotany/taxa/templates/gobotany/species.html
@@ -301,7 +301,7 @@
                     <h4>Sometimes Confused With:</h4>
                     <dl>
                     {% for lookalike in lookalikes %}
-                    <dt><a href="/species/{{ lookalike.lookalike_scientific_name|lower|replace:' ,/' }}/"><em>{{ lookalike.lookalike_scientific_name }}</em></a>:</dt>
+                        <dt><a href="/species/{{ lookalike.lookalike_scientific_name|lower|replace:' ,/' }}/"><em>{{ lookalike.lookalike_scientific_name }}</em></a>{% if lookalike.lookalike_characteristic %}:{% endif %}</dt>
                         <dd>{{ lookalike.lookalike_characteristic }}</dd>
                     {% endfor %}
                     </dl>
